Fix Memory Leaks and apply simple refactorings in cli